--- a/InstaClone/Info.plist
+++ b/InstaClone/Info.plist
@@ -22,6 +22,12 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please press OK to access your photo library</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Please press OK to access your media library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please press OK to access your camera</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
