--- a/InstaClone/Info.plist
+++ b/InstaClone/Info.plist
@@ -20,22 +20,24 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Please press OK to access your photo library</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>Please press OK to access your media library</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Please press OK to access your camera</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Please allow to get your location</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please press OK to access your photo library</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<true/>
 	<key>UIStatusBarTintParameters</key>
 	<dict>
 		<key>UINavigationBar</key>
